Align the no issues image and icon to center

--- a/ui/src/app/components/summary/summary.component.scss
+++ b/ui/src/app/components/summary/summary.component.scss
@@ -24,7 +24,7 @@
   }
   .no-issue-container {
     width: 100%;
-    min-height: 400px;
+    min-height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -155,3 +155,4 @@ h3 {
     }
   }
 }
+
